feat: Add real-time aggregation and convert LogEntry to record
- Add concurrent maps to track login stats, uploads, and failures during parsing
- Create updateAggregates() method called during log processing
- Add LoginStatsHolder for thread-safe counting
- Convert LogEntry to record for consistency with other model classes
- Remove Lombok dependency, use explicit getters
- Add progress and event breakdown logging"